testdata/Call.switch/Call.m2p_p/Call.m2p_p.3.1-migr.check
// exitCode: 1
-- Error: target/testdata/Call.switch/Call.m2p_p.scala:2:26 --------------------
2 |class M2P extends M { def d   = "" }
  |                          ^
  |                  error overriding method d in trait M of type (): String;
  |                    method d of type => String has incompatible type
1 error found
